--- a/Week03/assignment03-pie.ipynb
+++ b/Week03/assignment03-pie.ipynb
@@ -317,6 +317,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f3d85ea",
+   "metadata": {},
+   "source": [
+    "# Import matplotlib \n",
+    "To plot the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ff3c52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "844a03e1",
    "metadata": {},
    "source": [
