--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -10,11 +10,67 @@
     "- Weighted mean age (by sex).\n",
     "- The difference between the sexes by age."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1b7f1daf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4dd6f444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Statistic Label  CensusYear         Sex Single Year of Age  \\\n",
+      "0      Population        2022  Both sexes           All ages   \n",
+      "1      Population        2022  Both sexes           All ages   \n",
+      "2      Population        2022  Both sexes           All ages   \n",
+      "\n",
+      "  Administrative Counties    UNIT    VALUE  \n",
+      "0                 Ireland  Number  5149139  \n",
+      "1   Carlow County Council  Number    61968  \n",
+      "2     Dublin City Council  Number   592713  \n"
+     ]
+    }
+   ],
+   "source": [
+    "FILENAME = 'cso-populationbyage.csv'\n",
+    "DATADIR = './'\n",
+    "FULLPATH = DATADIR + FILENAME\n",
+    "\n",
+    "# read the CSV file into a DataFrame\n",
+    "df = pd.read_csv(FULLPATH)\n",
+    "print(df.head(3))  # print the first 3 rows to verify\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
