drop columns and using 'inplace=True'

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -51,6 +51,37 @@
     "# read the CSV file into a DataFrame\n",
     "df = pd.read_csv(FULLPATH)\n",
     "print(df.head(3))  # print the first 3 rows to verify\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c831623d",
+   "metadata": {},
+   "source": [
+    "Drop columns that we don't need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9d00cd66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Single Year of Age Administrative Counties    VALUE\n",
+      "0           All ages                 Ireland  5149139\n",
+      "1           All ages   Carlow County Council    61968\n",
+      "2           All ages     Dublin City Council   592713\n"
+     ]
+    }
+   ],
+   "source": [
+    "drop_col_list = ['Statistic Label', 'CensusYear', 'Sex', 'UNIT']\n",
+    "df.drop(columns=drop_col_list, inplace=True)\n",
+    "print(df.head(3))  # print the first 3 rows to verify"
    ]
   }
  ],
