Remove unnecessary text like "All ages" for better data readability

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -5,7 +5,7 @@
    "id": "195efc3a",
    "metadata": {},
    "source": [
-    "This notebook analyses the differences between the sexes by age in Ireland.\n",
+    "This notebook analyses the differences between the sexes by age in Ireland, from the next dataset: cso-populationbyage.csv.\n",
     "\n",
     "- Weighted mean age (by sex).\n",
     "- The difference between the sexes by age."
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,45 @@
    ],
    "source": [
     "drop_col_list = ['Statistic Label', 'CensusYear', 'Sex', 'UNIT']\n",
-    "df.drop(columns=drop_col_list, inplace=True)\n",
+    "df.drop(columns=drop_col_list, inplace=True) # Inplace=True to modify the DataFrame directly\n",
+    "print(df.head(3))  # print the first 3 rows to verify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6defe319",
+   "metadata": {},
+   "source": [
+    "Having words in the age field, such as \"All ages,\" \"under 1 year,\" \"years and over,\" and \"years,\" can be problematic when analyzing the data. Therefore, we will remove these words and keep only the age as a number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ede4cd9",
+   "metadata": {},
+   "source": [
+    "First step is remove the \"All ages\" text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a1f4fcce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Single Year of Age Administrative Counties  VALUE\n",
+      "32       Under 1 year                 Ireland  57796\n",
+      "33       Under 1 year   Carlow County Council    699\n",
+      "34       Under 1 year     Dublin City Council   6213\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df[df[\"Single Year of Age\"] != \"All ages\"]\n",
     "print(df.head(3))  # print the first 3 rows to verify"
    ]
   }
