Changing column using find and replace: "Under 1 year" = "0"

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -119,6 +119,36 @@
    ],
    "source": [
     "df = df[df[\"Single Year of Age\"] != \"All ages\"]\n",
+    "print(df.head(3))  # print the first 3 rows to verify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c5c244d",
+   "metadata": {},
+   "source": [
+    "Second step is change the column using find and replace. We will replace everything that says \"Under 1 year\" for \"0\" consider the minors have less than 1 year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fa561d53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Single Year of Age Administrative Counties  VALUE\n",
+      "32                  0                 Ireland  57796\n",
+      "33                  0   Carlow County Council    699\n",
+      "34                  0     Dublin City Council   6213\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].replace(\"Under 1 year\", \"0\")\n",
     "print(df.head(3))  # print the first 3 rows to verify"
    ]
   }
