--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -150,6 +150,17 @@
    "source": [
     "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].replace(\"Under 1 year\", \"0\")\n",
     "print(df.head(3))  # print the first 3 rows to verify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7410e0f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a new CSV file with the cleaned data\n",
+    "df.to_csv(\"population_foranalysis.csv\")"
    ]
   }
  ],
