--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -54,6 +54,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "bf40affb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a new CSV file with the cleaned data\n",
+    "#df.to_csv(\"population_foranalysis.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c831623d",
    "metadata": {},
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -154,14 +165,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7410e0f9",
+   "execution_count": 58,
+   "id": "29503598",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a new CSV file with the cleaned data\n",
     "df.to_csv(\"population_foranalysis.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2327e807",
+   "metadata": {},
+   "source": [
+    "Third step is change the text that is repeated regulary in the data set \"years\". To avoid do this one by one: '2 years' '3 years', we can use regular expressions, that they help to change/delete large amounts of data that are repeated in the data set.\n",
+    "\n",
+    "Source: https://www.w3schools.com/python/python_regex.asp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d17cb1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Regular expression to remove 'years' and 'year' from the 'Single Year of Age' column\n",
+    "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].str.replace(r'\\D', '', regex=True) # add r to indicate raw string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d398606c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
