Adding new CSV file with clean data (without year, years)

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "bf40affb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -151,27 +151,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Single Year of Age Administrative Counties  VALUE\n",
-      "32                  0                 Ireland  57796\n",
-      "33                  0   Carlow County Council    699\n",
-      "34                  0     Dublin City Council   6213\n"
+      "   Single Year of Age                Administrative Counties  VALUE\n",
+      "32                  0                                Ireland  57796\n",
+      "33                  0                  Carlow County Council    699\n",
+      "34                  0                    Dublin City Council   6213\n",
+      "35                  0  Dún Laoghaire Rathdown County Council   2457\n",
+      "36                  0                  Fingal County Council   4009\n"
      ]
     }
    ],
    "source": [
     "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].replace(\"Under 1 year\", \"0\")\n",
-    "print(df.head(3))  # print the first 3 rows to verify"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "29503598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create a new CSV file with the cleaned data\n",
-    "df.to_csv(\"population_foranalysis.csv\")"
+    "print(df.head(5))  # print the first 5 rows to verify"
    ]
   },
   {
@@ -186,14 +177,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7d17cb1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Single Year of Age   Administrative Counties  VALUE\n",
+      "3259                100  Roscommon County Council     12\n",
+      "3260                100      Sligo County Council     12\n",
+      "3261                100      Cavan County Council     18\n",
+      "3262                100    Donegal County Council     33\n",
+      "3263                100   Monaghan County Council      8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Regular expression to remove 'years' and 'year' from the 'Single Year of Age' column\n",
+    "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].str.replace(r'\\D', '', regex=True) # add r to indicate raw string\n",
+    "print(df.tail(5))  # print the last 5 rows to verify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2ba8e673",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Regular expression to remove 'years' and 'year' from the 'Single Year of Age' column\n",
-    "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].str.replace(r'\\D', '', regex=True) # add r to indicate raw string"
+    "#Create a new CSV file with the cleaned data\n",
+    "df.to_csv(\"population_for_analysis.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6370dbc",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
