Converted 'Single Year of Age'  column to integer

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -212,10 +212,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "76007d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3232 entries, 32 to 3263\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column                   Non-Null Count  Dtype \n",
+      "---  ------                   --------------  ----- \n",
+      " 0   Single Year of Age       3232 non-null   object\n",
+      " 1   Administrative Counties  3232 non-null   object\n",
+      " 2   VALUE                    3232 non-null   int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 101.0+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.info())  # print DataFrame info to verify data types"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b6370dbc",
    "metadata": {},
-   "source": []
+   "source": [
+    "As we can see the Single Year of age column is an object and we want to have this values as a integer. We can change this using 'type' to 'int 64' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8a42977d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Single Year of Age\"] = df[\"Single Year of Age\"].astype('int64') # Convert to integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dd1f0a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3232 entries, 32 to 3263\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column                   Non-Null Count  Dtype \n",
+      "---  ------                   --------------  ----- \n",
+      " 0   Single Year of Age       3232 non-null   int64 \n",
+      " 1   Administrative Counties  3232 non-null   object\n",
+      " 2   VALUE                    3232 non-null   int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 101.0+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.info())  # print DataFrame info to verify data types"
+   ]
   },
   {
    "cell_type": "markdown",
