--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "4dd6f444",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "bf40affb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "7d17cb1b",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "2ba8e673",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "76007d76",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "8a42977d",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "dd1f0a42",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,203 @@
    "cell_type": "markdown",
    "id": "d398606c",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Pivot Tables\n",
+    "We can use pivot tables to summarize, analyze, and explore large datasets in a organized way.\n",
+    "And avoid certain issues when weuse cross tables. \n",
+    "\n",
+    "\n",
+    "Source: https://pandas.pydata.org/docs/reference/api/pandas.pivot_table.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8d65ac44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Administrative Counties  Carlow County Council  Cavan County Council  \\\n",
+      "Single Year of Age                                                     \n",
+      "0                                        699.0                1006.0   \n",
+      "1                                        649.0                1004.0   \n",
+      "2                                        689.0                1061.0   \n",
+      "3                                        754.0                1085.0   \n",
+      "4                                        745.0                1047.0   \n",
+      "5                                        749.0                1143.0   \n",
+      "6                                        750.0                1176.0   \n",
+      "7                                        889.0                1162.0   \n",
+      "8                                        819.0                1217.0   \n",
+      "9                                        882.0                1289.0   \n",
+      "\n",
+      "Administrative Counties  Clare County Council  Cork City Council  \\\n",
+      "Single Year of Age                                                 \n",
+      "0                                      1377.0             2283.0   \n",
+      "1                                      1360.0             2284.0   \n",
+      "2                                      1473.0             2306.0   \n",
+      "3                                      1468.0             2294.0   \n",
+      "4                                      1505.0             2243.0   \n",
+      "5                                      1620.0             2362.0   \n",
+      "6                                      1656.0             2496.0   \n",
+      "7                                      1663.0             2564.0   \n",
+      "8                                      1670.0             2516.0   \n",
+      "9                                      1806.0             2617.0   \n",
+      "\n",
+      "Administrative Counties  Cork County Council  Donegal County Council  \\\n",
+      "Single Year of Age                                                     \n",
+      "0                                     4190.0                  1797.0   \n",
+      "1                                     4115.0                  1881.0   \n",
+      "2                                     4290.0                  1971.0   \n",
+      "3                                     4437.0                  2074.0   \n",
+      "4                                     4620.0                  2089.0   \n",
+      "5                                     4753.0                  2174.0   \n",
+      "6                                     5072.0                  2224.0   \n",
+      "7                                     5342.0                  2212.0   \n",
+      "8                                     5410.0                  2319.0   \n",
+      "9                                     5501.0                  2391.0   \n",
+      "\n",
+      "Administrative Counties  Dublin City Council  \\\n",
+      "Single Year of Age                             \n",
+      "0                                     6213.0   \n",
+      "1                                     5699.0   \n",
+      "2                                     5830.0   \n",
+      "3                                     5580.0   \n",
+      "4                                     5624.0   \n",
+      "5                                     5575.0   \n",
+      "6                                     5813.0   \n",
+      "7                                     5912.0   \n",
+      "8                                     6086.0   \n",
+      "9                                     5970.0   \n",
+      "\n",
+      "Administrative Counties  Dún Laoghaire Rathdown County Council  \\\n",
+      "Single Year of Age                                               \n",
+      "0                                                       2457.0   \n",
+      "1                                                       2437.0   \n",
+      "2                                                       2489.0   \n",
+      "3                                                       2613.0   \n",
+      "4                                                       2658.0   \n",
+      "5                                                       2868.0   \n",
+      "6                                                       2879.0   \n",
+      "7                                                       2974.0   \n",
+      "8                                                       2985.0   \n",
+      "9                                                       3004.0   \n",
+      "\n",
+      "Administrative Counties  Fingal County Council  Galway City Council  ...  \\\n",
+      "Single Year of Age                                                   ...   \n",
+      "0                                       4009.0                792.0  ...   \n",
+      "1                                       3894.0                757.0  ...   \n",
+      "2                                       4308.0                792.0  ...   \n",
+      "3                                       4384.0                799.0  ...   \n",
+      "4                                       4422.0                830.0  ...   \n",
+      "5                                       4639.0                849.0  ...   \n",
+      "6                                       4863.0                855.0  ...   \n",
+      "7                                       5053.0                893.0  ...   \n",
+      "8                                       5360.0                923.0  ...   \n",
+      "9                                       5400.0                942.0  ...   \n",
+      "\n",
+      "Administrative Counties  Monaghan County Council  Offaly County Council  \\\n",
+      "Single Year of Age                                                        \n",
+      "0                                          868.0                  935.0   \n",
+      "1                                          821.0                  937.0   \n",
+      "2                                          870.0                  945.0   \n",
+      "3                                          900.0                 1009.0   \n",
+      "4                                          873.0                 1007.0   \n",
+      "5                                          882.0                 1099.0   \n",
+      "6                                          995.0                 1079.0   \n",
+      "7                                          968.0                 1238.0   \n",
+      "8                                          991.0                 1216.0   \n",
+      "9                                          990.0                 1210.0   \n",
+      "\n",
+      "Administrative Counties  Roscommon County Council  Sligo County Council  \\\n",
+      "Single Year of Age                                                        \n",
+      "0                                           748.0                 743.0   \n",
+      "1                                           764.0                 766.0   \n",
+      "2                                           893.0                 764.0   \n",
+      "3                                           859.0                 825.0   \n",
+      "4                                           833.0                 820.0   \n",
+      "5                                           913.0                 819.0   \n",
+      "6                                           923.0                 824.0   \n",
+      "7                                          1011.0                 934.0   \n",
+      "8                                           982.0                 942.0   \n",
+      "9                                          1029.0                 960.0   \n",
+      "\n",
+      "Administrative Counties  South Dublin County Council  \\\n",
+      "Single Year of Age                                     \n",
+      "0                                             3544.0   \n",
+      "1                                             3673.0   \n",
+      "2                                             3734.0   \n",
+      "3                                             3856.0   \n",
+      "4                                             3870.0   \n",
+      "5                                             4053.0   \n",
+      "6                                             4198.0   \n",
+      "7                                             4394.0   \n",
+      "8                                             4503.0   \n",
+      "9                                             4522.0   \n",
+      "\n",
+      "Administrative Counties  Tipperary County Council  \\\n",
+      "Single Year of Age                                  \n",
+      "0                                          1932.0   \n",
+      "1                                          1808.0   \n",
+      "2                                          1836.0   \n",
+      "3                                          2048.0   \n",
+      "4                                          2072.0   \n",
+      "5                                          2070.0   \n",
+      "6                                          2202.0   \n",
+      "7                                          2236.0   \n",
+      "8                                          2314.0   \n",
+      "9                                          2267.0   \n",
+      "\n",
+      "Administrative Counties  Waterford City & County Council  \\\n",
+      "Single Year of Age                                         \n",
+      "0                                                 1340.0   \n",
+      "1                                                 1266.0   \n",
+      "2                                                 1329.0   \n",
+      "3                                                 1476.0   \n",
+      "4                                                 1390.0   \n",
+      "5                                                 1515.0   \n",
+      "6                                                 1627.0   \n",
+      "7                                                 1689.0   \n",
+      "8                                                 1736.0   \n",
+      "9                                                 1727.0   \n",
+      "\n",
+      "Administrative Counties  Westmeath County Council  Wexford County Council  \\\n",
+      "Single Year of Age                                                          \n",
+      "0                                          1129.0                  1792.0   \n",
+      "1                                          1158.0                  1724.0   \n",
+      "2                                          1108.0                  1835.0   \n",
+      "3                                          1148.0                  1864.0   \n",
+      "4                                          1208.0                  1941.0   \n",
+      "5                                          1276.0                  2022.0   \n",
+      "6                                          1352.0                  2165.0   \n",
+      "7                                          1331.0                  2233.0   \n",
+      "8                                          1412.0                  2292.0   \n",
+      "9                                          1454.0                  2354.0   \n",
+      "\n",
+      "Administrative Counties  Wicklow County Council  \n",
+      "Single Year of Age                               \n",
+      "0                                        1710.0  \n",
+      "1                                        1682.0  \n",
+      "2                                        1796.0  \n",
+      "3                                        1862.0  \n",
+      "4                                        1897.0  \n",
+      "5                                        2076.0  \n",
+      "6                                        2116.0  \n",
+      "7                                        2197.0  \n",
+      "8                                        2237.0  \n",
+      "9                                        2364.0  \n",
+      "\n",
+      "[10 rows x 32 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_analysis = pd.pivot_table(df, 'VALUE', 'Single Year of Age', 'Administrative Counties')\n",
+    "print(df_analysis.head(10))  # print the first 10 rows to verify\n",
+    "df_analysis.to_csv(\"population_for_analysis.csv\")"
+   ]
   }
  ],
  "metadata": {
