weighted mean - female

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "176b77fc",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "9791  Monaghan County Council  Number      7  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "9adee02d",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "5563fc27",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "7d17cb1b",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "2ba8e673",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "76007d76",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "8a42977d",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "dd1f0a42",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8d65ac44",
    "metadata": {},
    "outputs": [
@@ -455,9 +455,89 @@
    ],
    "source": [
     "# Create pivot table, to get the sum of population by age and sex\n",
-    "df = pd.pivot_table(df, index ='Single Year of Age', columns='Sex', values='VALUE', aggfunc='sum') #aggfunc='sum' to sum the values\n",
-    "print(df.head(10))  # print the first 10 rows to verify\n",
-    "df.to_csv(\"population_for_analysis.csv\")"
+    "df_analysis = pd.pivot_table(df, index ='Single Year of Age', columns='Sex', values='VALUE', aggfunc='sum') \n",
+    "#aggfunc='sum' to sum the values\n",
+    "print(df_analysis.head(10))  # print the first 10 rows to verify\n",
+    "df_analysis.to_csv(\"population_for_analysis.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6e16279",
+   "metadata": {},
+   "source": [
+    "# Weighted mean age (by sex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f039f349",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Female', 'Male']\n"
+     ]
+    }
+   ],
+   "source": [
+    "headers = list(df_analysis.columns)\n",
+    "genders = headers[0:]  # Get all genders from the columns\n",
+    "print(genders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "994e07f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5089098\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_female = df_analysis[genders[1]].sum()\n",
+    "print(age_female)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4e5d2354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex                 Female   Male\n",
+      "Single Year of Age               \n",
+      "0                    56372  59220\n",
+      "1                    55090  57750\n",
+      "2                    57948  60472\n",
+      "3                    58966  62002\n",
+      "4                    59638  63372\n",
+      "...                    ...    ...\n",
+      "96                    1912    654\n",
+      "97                    1464    434\n",
+      "98                     984    260\n",
+      "99                     672    210\n",
+      "100                   1168    308\n",
+      "\n",
+      "[101 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_analysis) \n"
    ]
   }
  ],
