Weighted mean age by sex, with format.

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -466,7 +466,8 @@
    "id": "f6e16279",
    "metadata": {},
    "source": [
-    "# Weighted mean age (by sex)"
+    "# Weighted mean age (by sex)\n",
+    "Weighted mean age (by sex) is calculated as sum(age * population) / sum(population)"
    ]
   },
   {
@@ -538,6 +539,72 @@
    ],
    "source": [
     "print(df_analysis) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "69113a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "Female    202844406\n",
+      "Male      192059748\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages = df_analysis[genders].mul(df_analysis.index, axis=0).sum()\n",
+    "print(ages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ae8f37a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "Female    38.939796\n",
+      "Male      37.739448\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the weighted mean age (by sex)\n",
+    "weighted_mean_age = ages / df_analysis.sum()\n",
+    "print(weighted_mean_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "51fc3204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weighted mean age for Females: 38.94\n",
+      "Weighted mean age for Males: 37.74\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print weighted mean ages separately and formatted\n",
+    "print(f\"Weighted mean age for Females: {weighted_mean_age['Female']:.2f}\")\n",
+    "print(f\"Weighted mean age for Males: {weighted_mean_age['Male']:.2f}\")"
    ]
   }
  ],
