Finalizing part 1 of the assignment: Including markdowns with instructions and descriptions

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e5c8cb4d",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "This assignment is divided into 3 parts\n",
+    "- Part 1: The program should analyses the differences between the sexes by age in Ireland.\n",
+    "* Weighted mean age (by sex)\n",
+    "* The difference between the sexes by age\n",
+    "\n",
+    "- Part 2: Creat a variable that stores an age (35 years old).\n",
+    "* The code would group the people within 5 years of that age together, into one age group. \n",
+    "* The program should calculate the population difference between the sexes in that age group.\n",
+    "\n",
+    "- Part 3: The would work out which region in Ireland has the biggest population difference between the sexes in that age group"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "195efc3a",
    "metadata": {},
    "source": [
+    "# Part 1 \n",
+    "## 1.1 Preparing the enviroment\n",
     "This notebook analyses the differences between the sexes by age in Ireland, from the following link: \n",
     "\"https://ws.cso.ie/public/api.restful/PxStat.Data.Cube_API.ReadDataset/FY006A/CSV/1.0/en\"\n",
     "- Weighted mean age (by sex).\n",
@@ -466,7 +486,7 @@
    "id": "f6e16279",
    "metadata": {},
    "source": [
-    "# Weighted mean age (by sex)\n",
+    "# 1.2 Weighted mean age (by sex)\n",
     "Weighted mean age (by sex) is calculated as sum(age * population) / sum(population)"
    ]
   },
@@ -612,7 +632,7 @@
    "id": "0e562519",
    "metadata": {},
    "source": [
-    "# Difference between the sexes by age"
+    "# 1.3 Difference between the sexes by age"
    ]
   },
   {
@@ -674,6 +694,14 @@
     "plt.xlabel('Age')\n",
     "plt.ylabel('Difference (Female - Male)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6b9f42",
+   "metadata": {},
+   "source": [
+    "# Part 2"
    ]
   }
  ],
