Second part of the task: - Create a variable

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -701,7 +701,21 @@
    "id": "ac6b9f42",
    "metadata": {},
    "source": [
-    "# Part 2"
+    "# Part 2\n",
+    "The program has a variable that stores an age (35 Years old)\n",
+    "And would group the people within 5 years of that age together, into one age group. \n",
+    "After this will calculate the population difference between the sexes in that age group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "401ca315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a variable to storage an age.\n",
+    "var_age = 35"
    ]
   }
  ],
