Grouping people within +-5 years

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 183,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 184,
    "id": "176b77fc",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "9791  Monaghan County Council  Number      7  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 185,
    "id": "9adee02d",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 186,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 187,
    "id": "5563fc27",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 188,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 189,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 190,
    "id": "7d17cb1b",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 191,
    "id": "2ba8e673",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 192,
    "id": "76007d76",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 193,
    "id": "8a42977d",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 194,
    "id": "dd1f0a42",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 195,
    "id": "8d65ac44",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 196,
    "id": "f039f349",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 197,
    "id": "994e07f8",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 198,
    "id": "4e5d2354",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 199,
    "id": "69113a80",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 200,
    "id": "8ae8f37a",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 201,
    "id": "51fc3204",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 202,
    "id": "f26d51de",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 203,
    "id": "6ec379d1",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "id": "401ca315",
    "metadata": {},
    "outputs": [],
@@ -717,6 +717,58 @@
     "# Create a variable to storage an age.\n",
     "var_age = 35"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af1583d1",
+   "metadata": {},
+   "source": [
+    "Grouping within 5 years of that age together.\n",
+    "To group conditions: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#combining-multiple-conditional-statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77af7e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Sex  Single Year of Age                Administrative Counties  VALUE\n",
+      "4256    Male                  30                                Ireland  30858\n",
+      "4257    Male                  30                  Carlow County Council    367\n",
+      "4258    Male                  30                    Dublin City Council   6163\n",
+      "4259    Male                  30  Dún Laoghaire Rathdown County Council   1511\n",
+      "4260    Male                  30                  Fingal County Council   1888\n",
+      "...      ...                 ...                                    ...    ...\n",
+      "7867  Female                  40               Roscommon County Council    556\n",
+      "7868  Female                  40                   Sligo County Council    538\n",
+      "7869  Female                  40                   Cavan County Council    630\n",
+      "7870  Female                  40                 Donegal County Council   1293\n",
+      "7871  Female                  40                Monaghan County Council    518\n",
+      "\n",
+      "[704 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter the DataFrame for ages within +-5 years of var_age\n",
+    "age_group = df[(df[\"Single Year of Age\"] >= var_age - 5) &\n",
+    "                  (df[\"Single Year of Age\"] <= var_age + 5)]\n",
+    "# using & for 'and' condition, and parentheses to group conditions\n",
+    "print(age_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f42a469c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
