--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 6,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "id": "176b77fc",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "9791  Monaghan County Council  Number      7  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 8,
    "id": "9adee02d",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 9,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 10,
    "id": "5563fc27",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 11,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 12,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 13,
    "id": "7d17cb1b",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
    "id": "2ba8e673",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 15,
    "id": "76007d76",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "id": "8a42977d",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 17,
    "id": "dd1f0a42",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 18,
    "id": "8d65ac44",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 19,
    "id": "f039f349",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 20,
    "id": "994e07f8",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 21,
    "id": "4e5d2354",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 22,
    "id": "69113a80",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 23,
    "id": "8ae8f37a",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 24,
    "id": "51fc3204",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 25,
    "id": "f26d51de",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 26,
    "id": "6ec379d1",
    "metadata": {},
    "outputs": [
@@ -709,13 +709,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 27,
    "id": "401ca315",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a variable to storage an age.\n",
-    "var_age = 35"
+    "var_age = 35\n",
+    "print(var_age)"
    ]
   },
   {
@@ -729,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "77af7e56",
    "metadata": {},
    "outputs": [
@@ -756,6 +765,8 @@
    ],
    "source": [
     "# Filter the DataFrame for ages within +-5 years of var_age\n",
+    "\n",
+    "var_age = 35\n",
     "age_group = df[(df[\"Single Year of Age\"] >= var_age - 5) &\n",
     "                  (df[\"Single Year of Age\"] <= var_age + 5)]\n",
     "# using & for 'and' condition, and parentheses to group conditions\n",
@@ -763,12 +774,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b05a3065",
+   "metadata": {},
+   "source": [
+    "To calculate the population difference between the sexes in that age group, we can sum the population by sex in the group."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f42a469c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "Female    829012\n",
+      "Male      768060\n",
+      "Name: VALUE, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum the population in this age group by sex\n",
+    "# grupby method to group data and execute functions on these groups\n",
+    "# source: https://www.w3schools.com/python/pandas/ref_df_groupby.asp\n",
+    "age_group_sum = age_group.groupby(\"Sex\")[\"VALUE\"].sum()\n",
+    "print(age_group_sum)"
+   ]
   }
  ],
  "metadata": {
