Difference between the sexes in this age group

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -805,6 +805,26 @@
     "age_group_sum = age_group.groupby(\"Sex\")[\"VALUE\"].sum()\n",
     "print(age_group_sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d8167623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between Female and Male: 60952\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The difference between the sexes in this age group\n",
+    "age_group_diff = age_group_sum[genders[0]] - age_group_sum[genders[1]]\n",
+    "print(f\"Difference between {genders[0]} and {genders[1]}: {age_group_diff}\")"
+   ]
   }
  ],
  "metadata": {
