Part 3 - Sum the population by sex and regions

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "id": "401ca315",
    "metadata": {},
    "outputs": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "77af7e56",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f42a469c",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "d8167623",
    "metadata": {},
    "outputs": [
@@ -824,6 +824,47 @@
     "# The difference between the sexes in this age group\n",
     "age_group_diff = age_group_sum[genders[0]] - age_group_sum[genders[1]]\n",
     "print(f\"Difference between {genders[0]} and {genders[1]}: {age_group_diff}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dae104ac",
+   "metadata": {},
+   "source": [
+    "## Part 3\n",
+    "The code would work out which region in Ireland has the biggest population difference between the sexes in that age group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d6be3fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Administrative Counties   Sex   \n",
+      "Carlow County Council     Female    31146\n",
+      "                          Male      30822\n",
+      "Cavan County Council      Female    40644\n",
+      "                          Male      41060\n",
+      "Clare County Council      Female    65021\n",
+      "                                    ...  \n",
+      "Westmeath County Council  Male      47721\n",
+      "Wexford County Council    Female    83142\n",
+      "                          Male      80777\n",
+      "Wicklow County Council    Female    79287\n",
+      "                          Male      76564\n",
+      "Name: VALUE, Length: 64, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sum the population by sex and region\n",
+    "region_sum = df.groupby([\"Administrative Counties\", \"Sex\"])[\"VALUE\"].sum()\n",
+    "print(region_sum)"
    ]
   }
  ],
