Pivot table to read the population by sex and region

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -866,6 +866,45 @@
     "region_sum = df.groupby([\"Administrative Counties\", \"Sex\"])[\"VALUE\"].sum()\n",
     "print(region_sum)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67eda2c7",
+   "metadata": {},
+   "source": [
+    "To have a better reading of the data we can use pivot tables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "34f78ca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex                                    Female    Male\n",
+      "Administrative Counties                              \n",
+      "Carlow County Council                   31146   30822\n",
+      "Cavan County Council                    40644   41060\n",
+      "Clare County Council                    65021   62917\n",
+      "Cork City Council                      114268  109736\n",
+      "Cork County Council                    181043  179109\n",
+      "Donegal County Council                  84289   82795\n",
+      "Dublin City Council                    300917  291796\n",
+      "Dún Laoghaire Rathdown County Council  121828  112032\n",
+      "Fingal County Council                  167974  162532\n",
+      "Galway City Council                     44000   40414\n"
+     ]
+    }
+   ],
+   "source": [
+    "region_sum = pd.pivot_table(df, index ='Administrative Counties', columns='Sex', values='VALUE', aggfunc='sum') \n",
+    "#aggfunc='sum' to sum the values\n",
+    "print(region_sum.head(10))"
+   ]
   }
  ],
  "metadata": {
