The differences between sex by regions

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -905,6 +905,59 @@
     "#aggfunc='sum' to sum the values\n",
     "print(region_sum.head(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "09d029c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between Female and Male by regions: Administrative Counties\n",
+      "Carlow County Council                      324\n",
+      "Cavan County Council                      -416\n",
+      "Clare County Council                      2104\n",
+      "Cork City Council                         4532\n",
+      "Cork County Council                       1934\n",
+      "Donegal County Council                    1494\n",
+      "Dublin City Council                       9121\n",
+      "Dún Laoghaire Rathdown County Council     9796\n",
+      "Fingal County Council                     5442\n",
+      "Galway City Council                       3586\n",
+      "Galway County Council                      283\n",
+      "Ireland                                  60041\n",
+      "Kerry County Council                      1684\n",
+      "Kildare County Council                    1246\n",
+      "Kilkenny County Council                    394\n",
+      "Laois County Council                      -679\n",
+      "Leitrim County Council                      93\n",
+      "Limerick City & County Council             632\n",
+      "Longford County Council                   -147\n",
+      "Louth County Council                      1889\n",
+      "Mayo  County Council                      1186\n",
+      "Meath County Council                       850\n",
+      "Monaghan County Council                   -500\n",
+      "Offaly County Council                     -106\n",
+      "Roscommon County Council                   -81\n",
+      "Sligo County Council                      1140\n",
+      "South Dublin County Council               6583\n",
+      "Tipperary County Council                   617\n",
+      "Waterford City & County Council           1173\n",
+      "Westmeath County Council                   779\n",
+      "Wexford County Council                    2365\n",
+      "Wicklow County Council                    2723\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The differences between sex by regions \n",
+    "region_diff = region_sum[genders[0]] - region_sum[genders[1]]\n",
+    "print(f\"Difference between {genders[0]} and {genders[1]} by regions: {region_diff}\")"
+   ]
   }
  ],
  "metadata": {
